Setup CI and Release Pipelines.

--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,11 @@
 :microprofile-health: https://github.com/eclipse/microprofile-health/
+:ci: https://github.com/smallrye/smallrye-health/actions?query=workflow%3A%22SmallRye+Build%22
+:sonar: https://sonarcloud.io/dashboard?id=smallrye_smallrye-health
 
-image:https://semaphoreci.com/api/v1/smallrye/smallrye-health/branches/master/badge.svg["Semaphore CI", link="https://semaphoreci.com/smallrye/smallrye-health"]
-image:https://sonarcloud.io/api/project_badges/measure?project=smallrye_smallrye-health&metric=alert_status["Quality Gate Status", link="https://sonarcloud.io/dashboard?id=smallrye_smallrye-health"]
+image:https://github.com/smallrye/smallrye-health/workflows/SmallRye%20Build/badge.svg?branch=master[link={ci}]
+image:https://sonarcloud.io/api/project_badges/measure?project=smallrye_smallrye-health&metric=alert_status["Quality Gate Status", link={sonar}]
 image:https://img.shields.io/github/license/thorntail/thorntail.svg["License", link="http://www.apache.org/licenses/LICENSE-2.0"]
+image:https://img.shields.io/maven-central/v/io.smallrye/smallrye-health?color=green[]
 
 = SmallRye Health
 
