This added everything donated from MicroProfile-Ext to SmallRye. Fixes #138 Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>

--- a/README.adoc
+++ b/README.adoc
@@ -25,6 +25,7 @@ mvn clean install
 * link:implementation[] - Implementation of the Eclipse MicroProfile Health API.
 * link:tck[] - Test suite to run the implementation against the Eclipse MicroProfile Health TCK.
 * link:docs[] - Project documentation.
+* link:ui[] - A small UI for /health
 
 === Links
 
