Update version and links in the documentation for the 3.0 release

--- a/doc/modules/ROOT/pages/index.adoc
+++ b/doc/modules/ROOT/pages/index.adoc
@@ -1,7 +1,7 @@
 [[index]]
 = SmallRye Health Documentation
 
-SmallRye Health 2.2 is an implementation of the MicroProfile Health 2.2 specification.
+SmallRye Health 3.0 is an implementation of the MicroProfile Health 3.0 specification.
 
 Runtimes that currently use it as their health monitoring implementation include:
 
@@ -15,4 +15,4 @@ Runtimes that currently use it as their health monitoring implementation include
 
 * https://github.com/smallrye/smallrye-health/[SmallRye Health GitHub project repository]
 * https://github.com/eclipse/microprofile-health/[Eclipse MicroProfile Health repository]
-* https://download.eclipse.org/microprofile/microprofile-health-2.2/microprofile-health-spec.html[MicroProfile 2.2 specification text]
+* https://download.eclipse.org/microprofile/microprofile-health-3.0/microprofile-health-spec-3.0.html[MicroProfile 3.0 specification text]
