--- a/README.adoc
+++ b/README.adoc
@@ -23,8 +23,8 @@ mvn clean install
 === Project structure
 
 * link:implementation[] - Implementation of the Eclipse MicroProfile Health API.
-* link:tck[] - Test suite to run the implementation against the Eclipse MicroProfile Health TCK.
-* link:docs[] - Project documentation.
+* link:testsuite[] - Test suite to run the implementation against the Eclipse MicroProfile Health TCK.
+* link:doc[] - Project documentation.
 * link:ui[] - A small UI for /health
 
 === Links
